# trading_backtester

./: .gitignore  Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: lib.rs
derive_macros/: Cargo.toml
derive_macros/src/: lib.rs  parsers.rs  replay.rs
docs/: presentation.key
docs/drawio/: kernel.drawio  main_scheme.drawio
src/: broker.rs  concrete.rs  exchange.rs  interface.rs  kernel.rs  latency.rs  lib.rs  order.rs  order_book.rs  parallel.rs  replay.rs  settlement.rs  traded_pair.rs  trader.rs  types.rs  utils.rs
src/broker/: concrete.rs  reply.rs  request.rs
src/concrete/: broker.rs  exchange.rs  input.rs  latency.rs  message.rs  message_protocol.rs  order.rs  order_book.rs  replay.rs  traded_pair.rs  trader.rs  types.rs
src/concrete/input/: config.rs  one_tick.rs
src/concrete/input/config/: from_structs.rs  from_yaml.rs
src/concrete/message/: broker.rs  exchange.rs
src/concrete/message/broker/: reply.rs  request.rs
src/concrete/message/exchange/: reply.rs
src/concrete/message/replay/: request.rs
src/concrete/message/trader/: request.rs
src/concrete/message_protocol/: broker.rs  exchange.rs  replay.rs  trader.rs
src/concrete/message_protocol/broker/: reply.rs  request.rs
src/concrete/message_protocol/exchange/: reply.rs
src/concrete/message_protocol/replay/: request.rs
src/concrete/message_protocol/trader/: request.rs
src/concrete/order_book/: tests.rs
src/concrete/replay/settlement/: concrete.rs
src/concrete/traded_pair/: parser.rs  settlement.rs
src/concrete/traded_pair/settlement/: concrete.rs
src/concrete/trader/: subscriptions.rs
src/exchange/: concrete.rs  reply.rs
src/interface/: broker.rs  exchange.rs  latency.rs  message.rs  replay.rs  trader.rs
src/kernel/: action_processors.rs
src/latency/: concrete.rs
src/order_book/: tests.rs
src/replay/: concrete.rs  request.rs
src/settlement/: concrete.rs
src/traded_pair/: concrete.rs  parser.rs
src/trader/: concrete.rs  request.rs  subscriptions.rs
src/utils/: constants.rs  input.rs  queue.rs
src/utils/input/: config.rs  from_yaml.rs  one_tick.rs
src/utils/input/config/: from_structs.rs  from_yaml.rs
src/utils/input/config/from_yaml/: tests.rs
src/utils/input/from_yaml/: tests.rs
tests/: .gitignore  example_01.yml  example_02.yml  pyproject.toml
tests/example_01/: .gitignore  prl_list.txt  trd_list.txt
tests/example_01/open_close_times/: MOEX_open_close.csv  NYSE_open_close.tsv
tests/example_01/trades_start_stop_times/: start_stop_01.csv
tests/example_02/: prl_list.txt  trd_list.txt
tests/example_02/open_close_times/: MOEX_open_close.csv
tests/example_02/trades_start_stop_times/: start_stop_02.csv
tests/scripts/: TRD_PRL_Inconsistencies.ipynb
