[package]
name = "trading_backtester"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4.19"
derive_more = "^0.99.17"
enum_dispatch = "^0.3.7"
rand = "^0.8.4"
bitmask = "^0.5"
csv = "^1.1.6"
yaml-rust = "^0.4.5"

[profile.test]
opt-level = 3