[package]
name = "trading_backtester"
version = "0.0.1"
edition = "2021"
authors = ["Andrew Sonin <sonin.cel@yandex.ru>"]
keywords = ["library", "lib", "trading", "backtester_engine"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4.19"
derive_more = "^0.99.17"
rand = "^0.8.4"
bitflags = "^1.3.2"
csv = "^1.1.6"
yaml-rust = "^0.4.5"
rayon = "^1.5.1"
derive_macros = { path = "derive_macros" }

[profile.test]
opt-level = 3