[package]
name = "trading_backtester"
version = "0.0.1"
edition = "2021"
authors = ["Andrew Sonin <sonin.cel@yandex.ru>"]
description = """
A highly customizable framework designed for parallel tuning of trading algorithms \
by reproducing and simulating the trading history of exchanges and the behaviour of brokers.
"""
keywords = ["library", "lib", "trading", "backtester_engine"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4.19"
rand = "^0.8.4"

derive = { path = "derive", optional = true }

bitflags = { version = "^1.3.2", optional = true }
csv = { version = "^1.1.6", optional = true }
derive_more = { version = "^0.99.17", optional = true }
rayon = { version = "^1.5.1", optional = true }
yaml-rust = { version = "^0.4.5", optional = true }

[features]
concrete = ["bitflags", "csv", "derive_more", "enum_def", "yaml-rust"]
enum_def = []
enum_dispatch = ["derive"]
multithread = ["rayon"]

[profile.test]
opt-level = 3