[package]
name = "derive_macros"
version = "0.0.1"
authors = ["Andrew Sonin <sonin.cel@yandex.ru>"]
description = "Macros for deriving `trading_backtester::interface` traits for the enum-dispatched trait variants"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "^1"
proc-macro2 = "^1"
syn = "^1"