[tool.poetry]
name = "trading_backtester_tests"
version = "0.0.1"
description = "Local environment for trading_backtester development needs"
authors = ["Andrew Sonin <sonin.cel@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.0"
pandas = "^1.3.5"
matplotlib = "^3.5.1"
ipython = "^8.0.0"
jupyter = "^1.0.0"
jupyterlab = "^3.2.8"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=60"]
build-backend = "poetry.core.masonry.api"
